<resources>
    <string name="app_name">MVVM-Kotlin-Coroutine-CleanArchitecture</string>
    <string name="cancel">Cancel</string>
    <string name="log_out">Log out</string>
    <string name="login_to_you_account">Login to you account</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log In</string>

    <string name="todo_add_title">Add Todo</string>
    <string name="todo_add_header">Add new Todo</string>
    <string name="todo_add_success_msg">New record successfully inserted.</string>
    <string name="todo_add_error_msg">There was a problem. could not able to insert the record.</string>
    <string name="todo_add_validation_error">all the fields are mandatory</string>

    <string name="name_label">Name</string>
    <string name="description_label">Description</string>
    <string name="date_label">Date</string>
    <string name="submit_label">Submit</string>
    <string name="cancel_label">Cancel</string>

    <string name="todo_edit_title">Edit Todo</string>
    <string name="todo_edit_header">Edit new Todo</string>
    <string name="todo_edit_success_msg">Record successfully updated.</string>
    <string name="todo_edit_error_msg">There was a problem. could not able to update the record.</string>
    <string name="todo_edit_validation_error">all the fields are mandatory</string>
    <string name="update_label">Update</string>
    <string name="delete_label">Delete</string>
    <string name="todo_delete_success_msg">Record successfully deleted.</string>

    <string name="login_validation_error">Incorrect username and password</string>
    <string name="login_credential_error">There was a problem logging in. Check your credentials or create an account.</string>

    <string name="addtodo_validation_error">Enter all the mandatory fields</string>
    <string name="home_no_todo_error">There are no todos to display.</string>

</resources>
