<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".features.todo.presentation.login.LoginActivity">

    <TextView
        android:id="@+id/txt_todo_add_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/todo_add_header"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_todo_add_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/name_label" />

        <EditText
            android:id="@+id/edt_todo_add_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/txt_todo_add_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/description_label" />

        <EditText
            android:id="@+id/edt_todo_add_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:ems="10" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_todo_add_date"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight=".3"
            android:text="@string/date_label" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:orientation="horizontal"
            android:weightSum="1">

            <EditText
                android:id="@+id/edt_todo_add_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" />

            <ImageButton
                android:id="@+id/btn_todo_add_date"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_weight=".1"
                android:src="@android:drawable/ic_menu_day" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7">

            <Button
                android:id="@+id/btn_todo_todo_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit_label" />

            <Button
                android:id="@+id/btn_todo_add_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/cancel_label" />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>