<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:id="@+id/signup_root"
    tools:context=".features.todo.presentation.registration.RegistrationActivity">

    <TextView
        android:id="@+id/txt_login_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/crd_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.761" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/crd_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:defaultFocusHighlightEnabled="true"
        app:cardCornerRadius="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/txt_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/txt_signup_username"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_signup_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                app:layout_constraintBottom_toBottomOf="@+id/txt_signup_password"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/edt_signup_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text=""
                app:layout_constraintBaseline_toBaselineOf="@+id/txt_signup_username"
                app:layout_constraintStart_toEndOf="@+id/txt_signup_username"
                app:layout_constraintStart_toStartOf="@+id/edt_signup_password" />

            <TextView
                android:id="@+id/txt_signup_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                app:layout_constraintBaseline_toBaselineOf="@+id/edt_signup_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_signup_username" />


            <EditText
                android:id="@+id/edt_signup_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_signup_username" />

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/sign_up"
                app:layout_constraintEnd_toEndOf="@+id/txt_signup"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_signup_password" />

            <TextView
                android:id="@+id/txt_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:layout_marginRight="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_login"
                app:layout_constraintTop_toBottomOf="@+id/btn_signup" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_signup" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>